--- a/ScikitLearn/Classifier_Comparison_Julia.ipynb
+++ b/ScikitLearn/Classifier_Comparison_Julia.ipynb
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[34mINFO: Precompiling module ScikitLearn.\n",
-      "\u001b[0m\u001b[1m\u001b[34mINFO: Recompiling stale cache file /home/juser/.julia/lib/v0.5/PyPlot.ji for module PyPlot.\n",
-      "\u001b[0m\u001b[1m\u001b[34mINFO: Precompiling module DecisionTree.\n",
-      "\u001b[0m"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mArgumentError: Module ScikitLearn not found in current path.\nRun `Pkg.add(\"ScikitLearn\")` to install the ScikitLearn package.\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mArgumentError: Module ScikitLearn not found in current path.\nRun `Pkg.add(\"ScikitLearn\")` to install the ScikitLearn package.\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1m_require\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:435\u001b[22m\u001b[22m",
+      " [2] \u001b[1mrequire\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:405\u001b[22m\u001b[22m"
      ]
     }
    ],
@@ -69,10 +69,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: KNeighborsClassifier not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: KNeighborsClassifier not defined\u001b[39m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "h = .02  # step size in the mesh\n",
     "\n",
@@ -108,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -198,30 +204,21 @@
     "end\n",
     "fig[:subplots_adjust](left=.02, right=.98)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.5.1",
+   "display_name": "Julia 0.6.2",
    "language": "julia",
-   "name": "julia-0.5"
+   "name": "julia-0.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.1"
+   "version": "0.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
