--- a/statistic/distributions.ipynb
+++ b/statistic/distributions.ipynb
@@ -5888,15 +5888,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.0.3 (4 threads)",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.0k"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.3"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
