--- a/statistic/photon.ipynb
+++ b/statistic/photon.ipynb
@@ -19531,6 +19531,27 @@
    "source": [
     "fit(Normal,x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: Normal not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: Normal not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[1]:1"
+     ]
+    }
+   ],
+   "source": [
+    "Normal(1, 1.)"
+   ]
   }
  ],
  "metadata": {
