--- a/kalman/kalman-1D.ipynb
+++ b/kalman/kalman-1D.ipynb
@@ -1460,6 +1460,183 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"400\" viewBox=\"0 0 2400 1600\">\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip4400\">\n",
+       "    <rect x=\"0\" y=\"0\" width=\"2400\" height=\"1600\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<path clip-path=\"url(#clip4400)\" d=\"\n",
+       "M0 1600 L2400 1600 L2400 0 L0 0  Z\n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip4401\">\n",
+       "    <rect x=\"480\" y=\"0\" width=\"1681\" height=\"1600\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<path clip-path=\"url(#clip4400)\" d=\"\n",
+       "M113.754 1487.47 L2352.76 1487.47 L2352.76 47.2441 L113.754 47.2441  Z\n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip4402\">\n",
+       "    <rect x=\"113\" y=\"47\" width=\"2240\" height=\"1441\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  529.167,1487.47 529.167,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  969.222,1487.47 969.222,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  1409.28,1487.47 1409.28,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  1849.33,1487.47 1849.33,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  2289.39,1487.47 2289.39,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  113.754,1390 2352.76,1390 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  113.754,1126.32 2352.76,1126.32 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  113.754,862.631 2352.76,862.631 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  113.754,598.945 2352.76,598.945 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  113.754,335.259 2352.76,335.259 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  113.754,71.5728 2352.76,71.5728 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,1487.47 2352.76,1487.47 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,1487.47 113.754,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  529.167,1487.47 529.167,1470.19 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  969.222,1487.47 969.222,1470.19 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1409.28,1487.47 1409.28,1470.19 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1849.33,1487.47 1849.33,1470.19 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  2289.39,1487.47 2289.39,1470.19 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,1390 140.622,1390 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,1126.32 140.622,1126.32 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,862.631 140.622,862.631 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,598.945 140.622,598.945 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,335.259 140.622,335.259 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  113.754,71.5728 140.622,71.5728 \n",
+       "  \"/>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 529.167, 1541.47)\" x=\"529.167\" y=\"1541.47\">5</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 969.222, 1541.47)\" x=\"969.222\" y=\"1541.47\">10</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 1409.28, 1541.47)\" x=\"1409.28\" y=\"1541.47\">15</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 1849.33, 1541.47)\" x=\"1849.33\" y=\"1541.47\">20</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 2289.39, 1541.47)\" x=\"2289.39\" y=\"1541.47\">25</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 89.7545, 1407.5)\" x=\"89.7545\" y=\"1407.5\">4</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 89.7545, 1143.82)\" x=\"89.7545\" y=\"1143.82\">5</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 89.7545, 880.131)\" x=\"89.7545\" y=\"880.131\">6</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 89.7545, 616.445)\" x=\"89.7545\" y=\"616.445\">7</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 89.7545, 352.759)\" x=\"89.7545\" y=\"352.759\">8</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 89.7545, 89.0728)\" x=\"89.7545\" y=\"89.0728\">9</text>\n",
+       "</g>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#009af9; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  177.122,88.0053 265.133,215.761 353.145,230.31 441.156,232.12 529.167,232.348 617.178,232.377 705.189,232.38 793.2,232.381 881.211,232.381 969.222,232.381 \n",
+       "  1057.23,232.381 1145.24,232.381 1233.26,232.381 1321.27,232.381 1409.28,232.381 1497.29,232.381 1585.3,232.381 1673.31,232.381 1761.32,232.381 1849.33,232.381 \n",
+       "  1937.34,232.381 2025.35,232.381 2113.37,232.381 2201.38,232.381 2289.39,232.381 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4402)\" style=\"stroke:#e26f46; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  177.122,1390.03 265.133,1440.3 353.145,1445.92 441.156,1446.61 529.167,1446.7 617.178,1446.71 705.189,1446.71 793.2,1446.71 881.211,1446.71 969.222,1446.71 \n",
+       "  1057.23,1446.71 1145.24,1446.71 1233.26,1446.71 1321.27,1446.71 1409.28,1446.71 1497.29,1446.71 1585.3,1446.71 1673.31,1446.71 1761.32,1446.71 1849.33,1446.71 \n",
+       "  1937.34,1446.71 2025.35,1446.71 2113.37,1446.71 2201.38,1446.71 2289.39,1446.71 \n",
+       "  \"/>\n",
+       "<path clip-path=\"url(#clip4400)\" d=\"\n",
+       "M1989.93 312.204 L2280.76 312.204 L2280.76 130.764 L1989.93 130.764  Z\n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1989.93,312.204 2280.76,312.204 2280.76,130.764 1989.93,130.764 1989.93,312.204 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#009af9; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  2013.93,191.244 2157.93,191.244 \n",
+       "  \"/>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:start;\" transform=\"rotate(0, 2181.93, 208.744)\" x=\"2181.93\" y=\"208.744\">y1</text>\n",
+       "</g>\n",
+       "<polyline clip-path=\"url(#clip4400)\" style=\"stroke:#e26f46; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  2013.93,251.724 2157.93,251.724 \n",
+       "  \"/>\n",
+       "<g clip-path=\"url(#clip4400)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:start;\" transform=\"rotate(0, 2181.93, 269.224)\" x=\"2181.93\" y=\"269.224\">y2</text>\n",
+       "</g>\n",
+       "</svg>\n"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot(σfilter)\n",
+    "plot!(σpriors)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
